# dagster_mflix

./: .gitignore  pyproject.toml
dlt/.dlt/: .sources
orchestrator/: README.md  pyproject.toml  setup.py
orchestrator/.dlt/: secrets.toml
orchestrator/orchestrator/: definitions.py  jobs.py  partitions.py  resources.py  schedules.py
orchestrator/orchestrator/assets/: mongodb.py  mongodb_asset.py  movies.py
